Fixed arrow point cropping

--- a/ci/web/front/src/prettyElements/prettyMenu.less
+++ b/ci/web/front/src/prettyElements/prettyMenu.less
@@ -185,7 +185,7 @@
 							background-color: @hoverColor;
 
 							.prettyMenuOptionArrow {
-								right: 0px;
+								right: 2px;
 								border-color: @koalityWhite;
 							}
 						}
@@ -227,7 +227,7 @@
 							background-color: @hoverColor;
 
 							.prettyMenuOptionArrow {
-								right: 0px;
+								right: 2px;
 								border-color: @koalityWhite;
 							}
 						}
